--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -1,14 +1,20 @@
 section.header {
-    background-color: red;
     background-image: 
-        linear-gradient(to right bottom ,$green-dark-gradient, $green-light-gradient),
+        linear-gradient(to right bottom, $green-dark-gradient, $green-light-gradient),
         url('../../images/hero.jpg');
     background-size: cover;
     height: 95vh;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    img {
+        position: absolute;
+        top: 2rem;
+        left: 2rem;
+        width: 4.5rem;
+    }
     div {
         margin: 0 auto;
         h1, h3 {
@@ -20,11 +26,44 @@ section.header {
         h1 {
             font-size: 3.5rem;
             margin-bottom: 1.2rem;
+            animation-name: moveInLeft;
+            animation-duration: 1.5s;
+            animation-timing-function: ease-out;
         }
+        @keyframes moveInLeft {
+            0% {
+                opacity: 0;
+                transform: translateX(-80px);
+            }
+            80% {
+                transform: translateX(10px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
         h3 {
             font-size: 1.5rem;
             letter-spacing: .85rem;
             margin-bottom: 4rem;
+            animation-name: moveInRight;
+            animation-duration: 1.5s;
+            animation-timing-function: ease-out;
+        }
+        @keyframes moveInRight {
+            0% {
+                opacity: 0;
+                transform: translateX(80px);
+            }
+            80% {
+                transform: translateX(-10px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateX(0);
+            }
         }
     }
     button {
@@ -32,6 +71,7 @@ section.header {
         margin: 0 auto;
         padding: 1.2rem;
         background-color: white;
+        color: inherit;
         border-radius: 2rem;
         border: none;
         cursor: pointer;
