--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -75,9 +75,54 @@ section.header {
         border-radius: 2rem;
         border: none;
         cursor: pointer;
+        position: relative;
+        animation-name: headerButton;
+        animation-duration: 1.5s;
+        animation-timing-function: ease-out;
+        @keyframes headerButton {
+            0% {
+                transform: translateY(40px);
+                opacity: 0;
+            }
+            40% {
+                transform: translateY(40px);
+                opacity: 0;
+            }
+            100% {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+        &::after {
+            content: "";
+            display: inline-block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            box-sizing: border-box;
+            padding: 1.2rem;
+            border-radius: 2rem;
+            background-color: white;
+            z-index: -1;
+            transition: all .3s;
+        }
         span {
             font-size: .95rem;
             text-transform: uppercase;
+        }
+        &:hover {
+            transform: translateY(-0.25rem);
+            box-shadow: 0 10px 20px rgba($color: black, $alpha: .2);
+            &::after {
+                transform: scaleX(1.3) scaleY(1.5);
+                opacity: 0;
+            }
+        }
+        &:active {
+            transform: translateY(-0.05rem);
+            box-shadow: 0 5px 10px rgba($color: black, $alpha: .2);
         }
     }
 }
