--- a/css/style.css
+++ b/css/style.css
@@ -151,10 +151,91 @@ section.header button {
   border-radius: 2rem;
   border: none;
   cursor: pointer;
+  position: relative;
+  -webkit-animation-name: headerButton;
+          animation-name: headerButton;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+}
+
+@-webkit-keyframes headerButton {
+  0% {
+    -webkit-transform: translateY(40px);
+            transform: translateY(40px);
+    opacity: 0;
+  }
+  40% {
+    -webkit-transform: translateY(40px);
+            transform: translateY(40px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes headerButton {
+  0% {
+    -webkit-transform: translateY(40px);
+            transform: translateY(40px);
+    opacity: 0;
+  }
+  40% {
+    -webkit-transform: translateY(40px);
+            transform: translateY(40px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+section.header button::after {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 1.2rem;
+  border-radius: 2rem;
+  background-color: white;
+  z-index: -1;
+  -webkit-transition: all .3s;
+  transition: all .3s;
 }
 
 section.header button span {
   font-size: .95rem;
   text-transform: uppercase;
+}
+
+section.header button:hover {
+  -webkit-transform: translateY(-0.25rem);
+          transform: translateY(-0.25rem);
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+section.header button:hover::after {
+  -webkit-transform: scaleX(1.3) scaleY(1.5);
+          transform: scaleX(1.3) scaleY(1.5);
+  opacity: 0;
+}
+
+section.header button:active {
+  -webkit-transform: translateY(-0.05rem);
+          transform: translateY(-0.05rem);
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 /*# sourceMappingURL=style.css.map */
