--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -33,10 +33,10 @@ section.header {
         @keyframes moveInLeft {
             0% {
                 opacity: 0;
-                transform: translateX(-80px);
+                transform: translateX(-5rem);
             }
             80% {
-                transform: translateX(10px);
+                transform: translateX(0.625rem);
             }
             100% {
                 opacity: 1;
@@ -55,10 +55,10 @@ section.header {
         @keyframes moveInRight {
             0% {
                 opacity: 0;
-                transform: translateX(80px);
+                transform: translateX(5rem);
             }
             80% {
-                transform: translateX(-10px);
+                transform: translateX(-0.625rem);
             }
             100% {
                 opacity: 1;
@@ -81,11 +81,11 @@ section.header {
         animation-timing-function: ease-out;
         @keyframes headerButton {
             0% {
-                transform: translateY(40px);
+                transform: translateY(2.5rem);
                 opacity: 0;
             }
             40% {
-                transform: translateY(40px);
+                transform: translateY(2.5rem);
                 opacity: 0;
             }
             100% {
@@ -114,7 +114,7 @@ section.header {
         }
         &:hover {
             transform: translateY(-0.25rem);
-            box-shadow: 0 10px 20px rgba($color: black, $alpha: .2);
+            box-shadow: 0 0.625rem 1.25rem rgba($color: black, $alpha: .2);
             &::after {
                 transform: scaleX(1.3) scaleY(1.5);
                 opacity: 0;
@@ -122,7 +122,7 @@ section.header {
         }
         &:active {
             transform: translateY(-0.05rem);
-            box-shadow: 0 5px 10px rgba($color: black, $alpha: .2);
+            box-shadow: 0 0.3125rem 0.625rem rgba($color: black, $alpha: .2);
         }
     }
 }
