--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,21 @@
-* {
+*, *::after, *::before {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+html {
+  font-size: 100%;
 }
 
 body {
   font-family: "Lato", Arial, Helvetica, sans-serif;
   font-weight: 400;
-  font-size: 16px;
   color: #777;
   padding: 1.8rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 section.header {
@@ -65,12 +70,12 @@ section.header div h1 {
 @-webkit-keyframes moveInLeft {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(-80px);
-            transform: translateX(-80px);
+    -webkit-transform: translateX(-5rem);
+            transform: translateX(-5rem);
   }
   80% {
-    -webkit-transform: translateX(10px);
-            transform: translateX(10px);
+    -webkit-transform: translateX(0.625rem);
+            transform: translateX(0.625rem);
   }
   100% {
     opacity: 1;
@@ -82,12 +87,12 @@ section.header div h1 {
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(-80px);
-            transform: translateX(-80px);
+    -webkit-transform: translateX(-5rem);
+            transform: translateX(-5rem);
   }
   80% {
-    -webkit-transform: translateX(10px);
-            transform: translateX(10px);
+    -webkit-transform: translateX(0.625rem);
+            transform: translateX(0.625rem);
   }
   100% {
     opacity: 1;
@@ -111,12 +116,12 @@ section.header div h3 {
 @-webkit-keyframes moveInRight {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(80px);
-            transform: translateX(80px);
+    -webkit-transform: translateX(5rem);
+            transform: translateX(5rem);
   }
   80% {
-    -webkit-transform: translateX(-10px);
-            transform: translateX(-10px);
+    -webkit-transform: translateX(-0.625rem);
+            transform: translateX(-0.625rem);
   }
   100% {
     opacity: 1;
@@ -128,12 +133,12 @@ section.header div h3 {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(80px);
-            transform: translateX(80px);
+    -webkit-transform: translateX(5rem);
+            transform: translateX(5rem);
   }
   80% {
-    -webkit-transform: translateX(-10px);
-            transform: translateX(-10px);
+    -webkit-transform: translateX(-0.625rem);
+            transform: translateX(-0.625rem);
   }
   100% {
     opacity: 1;
@@ -162,13 +167,13 @@ section.header button {
 
 @-webkit-keyframes headerButton {
   0% {
-    -webkit-transform: translateY(40px);
-            transform: translateY(40px);
+    -webkit-transform: translateY(2.5rem);
+            transform: translateY(2.5rem);
     opacity: 0;
   }
   40% {
-    -webkit-transform: translateY(40px);
-            transform: translateY(40px);
+    -webkit-transform: translateY(2.5rem);
+            transform: translateY(2.5rem);
     opacity: 0;
   }
   100% {
@@ -180,13 +185,13 @@ section.header button {
 
 @keyframes headerButton {
   0% {
-    -webkit-transform: translateY(40px);
-            transform: translateY(40px);
+    -webkit-transform: translateY(2.5rem);
+            transform: translateY(2.5rem);
     opacity: 0;
   }
   40% {
-    -webkit-transform: translateY(40px);
-            transform: translateY(40px);
+    -webkit-transform: translateY(2.5rem);
+            transform: translateY(2.5rem);
     opacity: 0;
   }
   100% {
@@ -222,8 +227,8 @@ section.header button span {
 section.header button:hover {
   -webkit-transform: translateY(-0.25rem);
           transform: translateY(-0.25rem);
-  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.2);
 }
 
 section.header button:hover::after {
@@ -235,7 +240,7 @@ section.header button:hover::after {
 section.header button:active {
   -webkit-transform: translateY(-0.05rem);
           transform: translateY(-0.05rem);
-  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.2);
 }
 /*# sourceMappingURL=style.css.map */
