--- a/css/style.scss
+++ b/css/style.scss
@@ -1,14 +1,19 @@
-* {
+*, *::after, *::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
+
+html {
+    font-size: 100%;
+}
+
 body {
     font-family: "Lato", Arial, Helvetica, sans-serif;
     font-weight: 400;
-    font-size: 16px;
     color: #777;
     padding: 1.8rem;
+    box-sizing: border-box;
 }
 @import 'commons/index';
 @import 'modules/header';
