--- a/css/modules/_header.scss
+++ b/css/modules/_header.scss
@@ -1,4 +1,4 @@
-section.header {
+.header {
     background-image: 
         linear-gradient(to right bottom, $green-dark-gradient, $green-light-gradient),
         url('../../images/hero.jpg');
@@ -9,108 +9,78 @@ section.header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    img {
+    &__logo {
         position: absolute;
         top: 2rem;
         left: 2rem;
         width: 4.5rem;
     }
-    div {
+    &__title {
         margin: 0 auto;
-        h1, h3 {
-            text-transform: uppercase;
-            color: white;
-            font-weight: 400;
-            letter-spacing: 2rem;
-        }
-        h1 {
-            font-size: 3.5rem;
-            margin-bottom: 1.2rem;
-            animation-name: moveInLeft;
-            animation-duration: 1.5s;
-            animation-timing-function: ease-out;
-        }
-        @keyframes moveInLeft {
-            0% {
-                opacity: 0;
-                transform: translateX(-5rem);
+        .heading {
+            &--main, &--sub {
+                text-align: center;
+                text-transform: uppercase;
+                color: white;
+                font-weight: 400;
             }
-            80% {
-                transform: translateX(0.625rem);
+            &--main {
+                letter-spacing: 2rem;
+                font-size: 3.5rem;
+                margin-bottom: 1.2rem;
+                animation-name: moveInLeft;
+                animation-duration: 1.5s;
+                animation-timing-function: ease-out;
             }
-            100% {
-                opacity: 1;
-                transform: translateX(0);
+            @keyframes moveInLeft {
+                0% {
+                    opacity: 0;
+                    transform: translateX(-5rem);
+                }
+                80% {
+                    transform: translateX(0.625rem);
+                }
+                100% {
+                    opacity: 1;
+                    transform: translateX(0);
+                }
             }
-        }
-
-        h3 {
-            font-size: 1.5rem;
-            letter-spacing: .85rem;
-            margin-bottom: 4rem;
-            animation-name: moveInRight;
-            animation-duration: 1.5s;
-            animation-timing-function: ease-out;
-        }
-        @keyframes moveInRight {
-            0% {
-                opacity: 0;
-                transform: translateX(5rem);
+    
+            &--sub {
+                font-size: 1.5rem;
+                letter-spacing: .85rem;
+                margin-bottom: 4rem;
+                animation-name: moveInRight;
+                animation-duration: 1.5s;
+                animation-timing-function: ease-out;
             }
-            80% {
-                transform: translateX(-0.625rem);
-            }
-            100% {
-                opacity: 1;
-                transform: translateX(0);
+            @keyframes moveInRight {
+                0% {
+                    opacity: 0;
+                    transform: translateX(5rem);
+                }
+                80% {
+                    transform: translateX(-0.625rem);
+                }
+                100% {
+                    opacity: 1;
+                    transform: translateX(0);
+                }
             }
         }
     }
-    button {
+    .btn {
         width: 15rem;
         margin: 0 auto;
         padding: 1.2rem;
-        background-color: white;
-        color: inherit;
         border-radius: 2rem;
         border: none;
         cursor: pointer;
-        position: relative;
-        animation-name: headerButton;
-        animation-duration: 1.5s;
-        animation-timing-function: ease-out;
-        @keyframes headerButton {
-            0% {
-                transform: translateY(2.5rem);
-                opacity: 0;
-            }
-            40% {
-                transform: translateY(2.5rem);
-                opacity: 0;
-            }
-            100% {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-        &::after {
-            content: "";
-            display: inline-block;
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            box-sizing: border-box;
-            padding: 1.2rem;
-            border-radius: 2rem;
-            background-color: white;
-            z-index: -1;
-            transition: all .3s;
-        }
-        span {
+        a {
+            color: $black;
             font-size: .95rem;
             text-transform: uppercase;
+            text-decoration: none;
         }
         &:hover {
             transform: translateY(-0.25rem);
@@ -123,6 +93,49 @@ section.header {
         &:active {
             transform: translateY(-0.05rem);
             box-shadow: 0 0.3125rem 0.625rem rgba($color: black, $alpha: .2);
+        }
+        &::after {
+            content: "";
+            display: inline-block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            box-sizing: border-box;
+            padding: 1.2rem;
+            border-radius: 2rem;
+            z-index: -1;
+            transition: all .3s;
+        }
+
+        &--white {
+            color: $black;
+            background-color: white;
+            &::after {
+                background-color: white;
+            }
+        }
+        
+        &--animated {
+            position: relative;
+            animation-name: headerButton;
+            animation-duration: 1.5s;
+            animation-timing-function: ease-out;
+            @keyframes headerButton {
+                0% {
+                    transform: translateY(2.5rem);
+                    opacity: 0;
+                }
+                40% {
+                    transform: translateY(2.5rem);
+                    opacity: 0;
+                }
+                100% {
+                    transform: translateY(0);
+                    opacity: 1;
+                }
+            }
         }
     }
 }
