--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
           box-sizing: border-box;
 }
 
-section.header {
+.header {
   background-image: -webkit-gradient(linear, left top, right bottom, from(#249b56ea), to(#2ecc708c)), url("../../images/hero.jpg");
   background-image: linear-gradient(to right bottom, #249b56ea, #2ecc708c), url("../../images/hero.jpg");
   background-size: cover;
@@ -38,25 +38,26 @@ section.header {
           justify-content: center;
 }
 
-section.header img {
+.header__logo {
   position: absolute;
   top: 2rem;
   left: 2rem;
   width: 4.5rem;
 }
 
-section.header div {
+.header__title {
   margin: 0 auto;
 }
 
-section.header div h1, section.header div h3 {
+.header__title .heading--main, .header__title .heading--sub {
+  text-align: center;
   text-transform: uppercase;
   color: white;
   font-weight: 400;
-  letter-spacing: 2rem;
 }
 
-section.header div h1 {
+.header__title .heading--main {
+  letter-spacing: 2rem;
   font-size: 3.5rem;
   margin-bottom: 1.2rem;
   -webkit-animation-name: moveInLeft;
@@ -101,7 +102,7 @@ section.header div h1 {
   }
 }
 
-section.header div h3 {
+.header__title .heading--sub {
   font-size: 1.5rem;
   letter-spacing: .85rem;
   margin-bottom: 4rem;
@@ -147,15 +148,69 @@ section.header div h3 {
   }
 }
 
-section.header button {
+.header .btn {
   width: 15rem;
   margin: 0 auto;
   padding: 1.2rem;
-  background-color: white;
-  color: inherit;
   border-radius: 2rem;
   border: none;
   cursor: pointer;
+}
+
+.header .btn a {
+  color: #777;
+  font-size: .95rem;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.header .btn:hover {
+  -webkit-transform: translateY(-0.25rem);
+          transform: translateY(-0.25rem);
+  -webkit-box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.2);
+}
+
+.header .btn:hover::after {
+  -webkit-transform: scaleX(1.3) scaleY(1.5);
+          transform: scaleX(1.3) scaleY(1.5);
+  opacity: 0;
+}
+
+.header .btn:active {
+  -webkit-transform: translateY(-0.05rem);
+          transform: translateY(-0.05rem);
+  -webkit-box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.2);
+}
+
+.header .btn::after {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 1.2rem;
+  border-radius: 2rem;
+  z-index: -1;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.header .btn--white {
+  color: #777;
+  background-color: white;
+}
+
+.header .btn--white::after {
+  background-color: white;
+}
+
+.header .btn--animated {
   position: relative;
   -webkit-animation-name: headerButton;
           animation-name: headerButton;
@@ -199,48 +254,5 @@ section.header button {
             transform: translateY(0);
     opacity: 1;
   }
-}
-
-section.header button::after {
-  content: "";
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 1.2rem;
-  border-radius: 2rem;
-  background-color: white;
-  z-index: -1;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-}
-
-section.header button span {
-  font-size: .95rem;
-  text-transform: uppercase;
-}
-
-section.header button:hover {
-  -webkit-transform: translateY(-0.25rem);
-          transform: translateY(-0.25rem);
-  -webkit-box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.2);
-}
-
-section.header button:hover::after {
-  -webkit-transform: scaleX(1.3) scaleY(1.5);
-          transform: scaleX(1.3) scaleY(1.5);
-  opacity: 0;
-}
-
-section.header button:active {
-  -webkit-transform: translateY(-0.05rem);
-          transform: translateY(-0.05rem);
-  -webkit-box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.2);
 }
 /*# sourceMappingURL=style.css.map */
