--- a/css/style.css
+++ b/css/style.css
@@ -10,62 +10,15 @@ html {
 }
 
 body {
-  font-family: "Lato", Arial, Helvetica, sans-serif;
-  font-weight: 400;
-  color: #777;
   padding: 1.8rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-.header {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#249b56ea), to(#2ecc708c)), url("../../images/hero.jpg");
-  background-image: linear-gradient(to right bottom, #249b56ea, #2ecc708c), url("../../images/hero.jpg");
-  background-size: cover;
-  height: 95vh;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-          clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.header__logo {
-  position: absolute;
-  top: 2rem;
-  left: 2rem;
-  width: 4.5rem;
-}
-
-.header__title {
-  margin: 0 auto;
-}
-
-.header__title .heading--main, .header__title .heading--sub {
-  text-align: center;
-  text-transform: uppercase;
-  color: white;
+body {
+  font-family: "Lato", Arial, Helvetica, sans-serif;
   font-weight: 400;
-}
-
-.header__title .heading--main {
-  letter-spacing: 2rem;
-  font-size: 3.5rem;
-  margin-bottom: 1.2rem;
-  -webkit-animation-name: moveInLeft;
-          animation-name: moveInLeft;
-  -webkit-animation-duration: 1.5s;
-          animation-duration: 1.5s;
-  -webkit-animation-timing-function: ease-out;
-          animation-timing-function: ease-out;
+  color: #777;
 }
 
 @-webkit-keyframes moveInLeft {
@@ -102,18 +55,6 @@ body {
   }
 }
 
-.header__title .heading--sub {
-  font-size: 1.5rem;
-  letter-spacing: .85rem;
-  margin-bottom: 4rem;
-  -webkit-animation-name: moveInRight;
-          animation-name: moveInRight;
-  -webkit-animation-duration: 1.5s;
-          animation-duration: 1.5s;
-  -webkit-animation-timing-function: ease-out;
-          animation-timing-function: ease-out;
-}
-
 @-webkit-keyframes moveInRight {
   0% {
     opacity: 0;
@@ -146,78 +87,6 @@ body {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
-}
-
-.header .btn {
-  width: 15rem;
-  margin: 0 auto;
-  padding: 1.2rem;
-  border-radius: 2rem;
-  border: none;
-  cursor: pointer;
-}
-
-.header .btn a {
-  color: #777;
-  font-size: .95rem;
-  text-transform: uppercase;
-  text-decoration: none;
-}
-
-.header .btn:hover {
-  -webkit-transform: translateY(-0.25rem);
-          transform: translateY(-0.25rem);
-  -webkit-box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.2);
-}
-
-.header .btn:hover::after {
-  -webkit-transform: scaleX(1.3) scaleY(1.5);
-          transform: scaleX(1.3) scaleY(1.5);
-  opacity: 0;
-}
-
-.header .btn:active {
-  -webkit-transform: translateY(-0.05rem);
-          transform: translateY(-0.05rem);
-  -webkit-box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.2);
-}
-
-.header .btn::after {
-  content: "";
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 1.2rem;
-  border-radius: 2rem;
-  z-index: -1;
-  -webkit-transition: all .3s;
-  transition: all .3s;
-}
-
-.header .btn--white {
-  color: #777;
-  background-color: white;
-}
-
-.header .btn--white::after {
-  background-color: white;
-}
-
-.header .btn--animated {
-  position: relative;
-  -webkit-animation-name: headerButton;
-          animation-name: headerButton;
-  -webkit-animation-duration: 1.5s;
-          animation-duration: 1.5s;
-  -webkit-animation-timing-function: ease-out;
-          animation-timing-function: ease-out;
 }
 
 @-webkit-keyframes headerButton {
@@ -254,5 +123,139 @@ body {
             transform: translateY(0);
     opacity: 1;
   }
+}
+
+.btn {
+  width: 15rem;
+  margin: 0 auto;
+  padding: 1.2rem;
+  border-radius: 2rem;
+  border: none;
+  cursor: pointer;
+}
+
+.btn a {
+  color: #777;
+  font-size: .95rem;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.btn:hover {
+  -webkit-transform: translateY(-0.25rem);
+          transform: translateY(-0.25rem);
+  -webkit-box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.625rem 1.25rem rgba(0, 0, 0, 0.2);
+}
+
+.btn:hover::after {
+  -webkit-transform: scaleX(1.3) scaleY(1.5);
+          transform: scaleX(1.3) scaleY(1.5);
+  opacity: 0;
+}
+
+.btn:active {
+  -webkit-transform: translateY(-0.05rem);
+          transform: translateY(-0.05rem);
+  -webkit-box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.3125rem 0.625rem rgba(0, 0, 0, 0.2);
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 1.2rem;
+  border-radius: 2rem;
+  z-index: -1;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.btn--white {
+  color: #777;
+  background-color: white;
+}
+
+.btn--white::after {
+  background-color: white;
+}
+
+.btn--animated {
+  position: relative;
+  -webkit-animation-name: headerButton;
+          animation-name: headerButton;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+}
+
+.heading--main, .heading--sub {
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  font-weight: 400;
+}
+
+.heading--main {
+  letter-spacing: 2rem;
+  font-size: 3.5rem;
+  margin-bottom: 1.2rem;
+  -webkit-animation-name: moveInLeft;
+          animation-name: moveInLeft;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+}
+
+.heading--sub {
+  font-size: 1.5rem;
+  letter-spacing: .85rem;
+  margin-bottom: 4rem;
+  -webkit-animation-name: moveInRight;
+          animation-name: moveInRight;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+  -webkit-animation-timing-function: ease-out;
+          animation-timing-function: ease-out;
+}
+
+.header {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#249b56ea), to(#2ecc708c)), url("../../images/hero.jpg");
+  background-image: linear-gradient(to right bottom, #249b56ea, #2ecc708c), url("../../images/hero.jpg");
+  background-size: cover;
+  height: 95vh;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header__logo {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  width: 4.5rem;
+}
+
+.header__title {
+  margin: 0 auto;
 }
 /*# sourceMappingURL=style.css.map */
