--- a/css/style.scss
+++ b/css/style.scss
@@ -1,19 +1,5 @@
-*, *::after, *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
-
-html {
-    font-size: 100%;
-}
-
-body {
-    font-family: "Lato", Arial, Helvetica, sans-serif;
-    font-weight: 400;
-    color: #777;
-    padding: 1.8rem;
-    box-sizing: border-box;
-}
-@import 'commons/index';
-@import 'modules/header';
+@import './commons/abstracts/index';
+@import './commons/base/index';
+@import './commons/components/index';
+@import './commons/layouts/index';
+@import './commons/pages/index';
