feat: flex grid done

--- a/css/commons/abstracts/_variables.scss
+++ b/css/commons/abstracts/_variables.scss
@@ -1,4 +1,10 @@
+// COLORS
 $green : #2ecc71;
 $green-dark-gradient: #249b56ea;
 $green-light-gradient: #2ecc708c;
 $black: #777;
+
+// GRID
+$grid-width: 71.25rem;
+$gutter-vertical: 5rem;
+$gutter-horizontal: 3.75rem;
