--- a/css/commons/abstracts/_variables.scss
+++ b/css/commons/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 $green : #2ecc71;
 $green-dark-gradient: #249b56ea;
 $green-light-gradient: #2ecc708c;
+$section-background-color: rgba(231, 231, 231, 0.3);
 $black: #777;
 
 // GRID
