feat: mixings for text theme were added

--- a/css/commons/abstracts/_variables.scss
+++ b/css/commons/abstracts/_variables.scss
@@ -2,6 +2,10 @@
 $green : #2ecc71;
 $green-dark-gradient: #249b56ea;
 $green-light-gradient: #2ecc708c;
+
+$blue-dark-gradient: #40199cea;
+$blue-light-gradient: #34d2dd8c;
+
 $section-background-color: rgba(231, 231, 231, 0.3);
 $black: #777;
 
