--- a/css/commons/pages/_home.scss
+++ b/css/commons/pages/_home.scss
@@ -3,6 +3,7 @@
     background-color: $section-background-color;
     margin-top: -8rem;
     &__title {
+      text-align: center;
       margin-bottom: 4rem;
     }
   
