--- a/css/commons/components/_titleSection.scss
+++ b/css/commons/components/_titleSection.scss
@@ -1,13 +1,23 @@
+@mixin customTextEffect {
+    transition: all .2s;
+    &:hover {
+        transform: skewY(2deg) skewX(20deg) scale(1.1);
+        text-shadow: .3rem 1rem .8rem rgba($color: #000000, $alpha: .2);
+    }
+}
+
 .titleSection {
-    text-align: center;
+    display: inline-block;
     font-size: 1.35rem;
     text-transform: uppercase;
     letter-spacing: 3px;
 
     &--natourTheme {
-        @include getTheme(natour);
+        @include getTheme("natour");
+        @include customTextEffect();
     }
     &--seaTheme {
-        @include getTheme(sea);
+        @include getTheme("sea");
+        @include customTextEffect();
     }
 }
