--- a/css/commons/components/_linkButton.scss
+++ b/css/commons/components/_linkButton.scss
@@ -1,38 +1,34 @@
 .linkButton {
-    border: none;
-    background: none;
+    display: inline-block;
+    padding: .8rem;
+    font-size: .9rem;
+    text-decoration: none;
     transition: all .2s;
+
     &:hover {
-        transform: translateY(-.2rem);
-        text-shadow: .3rem 1rem .8rem rgba($color: #000000, $alpha: .2);
+        color: white;
+        transform: translateY(-.15rem);
+        box-shadow: 0 .5rem 1rem rgba($color: #000000, $alpha: .15);
     }
 
-    a {
-        display: inline-block;
-        padding: .8rem;
-        font-size: .9rem;
-        text-decoration: none;
+    &:active {
+        transform: translateY(0);
+        box-shadow: 0 .25rem .7rem rgba($color: #000000, $alpha: .15);
     }
 
     &--green {
         border-bottom: 1px solid $green-dark-gradient;;
-        a {
-            color: $green-dark-gradient;
-            &:hover {
-                color: white;
-                background-color: $green-dark-gradient;
-            }
+        color: $green-dark-gradient;
+        &:hover {
+            background-color: $green-dark-gradient;
         }
     }
 
     &--blue {
         border-bottom: 1px solid $blue-dark-gradient;;
-        a {
-            color: $blue-dark-gradient;
-            &:hover {
-                color: white;
-                background-color: $blue-dark-gradient;
-            }
+        color: $blue-dark-gradient;
+        &:hover {
+            background-color: $blue-dark-gradient;
         }
     }
 }
