--- a/css/commons/components/_featureCard.scss
+++ b/css/commons/components/_featureCard.scss
@@ -1,4 +1,8 @@
 .featureCard {
+    background-color: rgba($color: white, $alpha: .8);
+    box-shadow: 0 1rem 1rem rgba($color: #000000, $alpha: .15);
+    padding: 1.8rem;
+    
     &__header {
         display: block;
         margin-bottom: 2rem;
@@ -9,12 +13,20 @@
 
     &__title {
         text-align: center;
+        font-size: .95rem;
         font-weight: bold;
         text-transform: uppercase;
         margin-bottom: 1rem;
     }
 
-    &__content {
+    &__content p{
         text-align: center;
+        line-height: 1.5rem;
+    }
+
+    transition: all .3s;
+
+    &:hover {
+        transform: translateY(-1rem) scale(1.025);    
     }
 }
