--- a/css/commons/components/_tourCard.scss
+++ b/css/commons/components/_tourCard.scss
@@ -1,25 +1,54 @@
 .tourCard {
+  background-color: white;
+  text-align: center;
+  padding-bottom: 3rem;
+  box-shadow: 0 1rem 1.5rem rgba($color: #000000, $alpha: .2);
   
   &__header {
+    position: relative;
+    height: 15rem;
+    margin-bottom: 1rem;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+    background-size: cover;
+    background-blend-mode: screen;;
+    background-position: center;
 
     &--summer {
-
+      background-color: orange;
+      background-image: url('../../../images/nat-5.jpg');
     }
     &--natour {
-
+      background-color: green;
+      background-image: url('../../../images/nat-6.jpg');
     }
     &--sea {
-
+      background-color: blue;
+      background-image: url('../../../images/nat-7.jpg');
     }
 
     &__title {
-
+      position: absolute;
+      right: 1rem;
+      bottom: 2.5rem;
+      font-weight: 300;
+      font-size: 1.8rem;
+      text-transform: uppercase;
     }
 
   }
   &__detail {
-    &__item {
+    margin: 0 auto;
+    list-style: none;
+    width: 60%;
 
+    &__item {
+      font-size: .95rem;
+      padding-top: 1rem;
+      &:not(:last-of-type) {
+        padding-bottom: 1rem;
+        border-bottom: 1px solid rgb(230, 228, 228);
+      }
     }
   }
 }
