feat: flipCard component and new structure in tourCard were added

--- a/css/commons/components/_index.scss
+++ b/css/commons/components/_index.scss
@@ -1,9 +1,10 @@
-@import './button';
-@import './heading';
-@import './titleSection';
-@import './titleContent';
-@import './textContent';
-@import './linkButton';
-@import './galery';
-@import './featureCard';
-@import './tourCard';
+@import "./button";
+@import "./heading";
+@import "./titleSection";
+@import "./titleContent";
+@import "./textContent";
+@import "./linkButton";
+@import "./galery";
+@import "./featureCard";
+@import "./tourCard";
+@import "./flipCard";
