--- a/css/commons/abstracts/_variables.scss
+++ b/css/commons/abstracts/_variables.scss
@@ -1,10 +1,13 @@
 // COLORS
-$green : #2ecc71;
+$green: #2ecc71;
 $green-dark-gradient: #249b56ea;
 $green-light-gradient: #2ecc708c;
 
 $blue-dark-gradient: #40199cea;
 $blue-light-gradient: #34d2dd8c;
+
+$orange-dark-gradient: rgb(248, 149, 0);
+$orange-light-gradient: rgb(255, 213, 24);
 
 $section-background-color: rgba(231, 231, 231, 0.3);
 $black: #777;
