--- a/css/commons/components/_titleSection.scss
+++ b/css/commons/components/_titleSection.scss
@@ -1,22 +1,22 @@
-@mixin customTextEffect {
-    transition: all .2s;
-    &:hover {
-        transform: skewY(2deg) skewX(20deg) scale(1.1);
-        text-shadow: .3rem 1rem .8rem rgba($color: #000000, $alpha: .2);
-    }
+@mixin rotateTitleSection {
+  transition: all 0.2s;
+  &:hover {
+    transform: skewY(2deg) skewX(20deg) scale(1.1);
+    text-shadow: 0.3rem 1rem 0.8rem rgba($color: #000000, $alpha: 0.2);
+  }
 }
 
 .titleSection {
-    display: inline-block;
-    font-size: 1.35rem;
-    text-transform: uppercase;
-    letter-spacing: 3px;
+  display: inline-block;
+  font-size: 1.35rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
 
-    &--natourTheme {
-        @include getTheme("natour");
-    }
-    &--seaTheme {
-        @include getTheme("sea");
-    }
-    @include customTextEffect();
+  &--natourTheme {
+    @include getTheme("natour");
+  }
+  &--seaTheme {
+    @include getTheme("sea");
+  }
+  @include rotateTitleSection();
 }
