feat: front tourCard side done

--- a/css/commons/abstracts/_variables.scss
+++ b/css/commons/abstracts/_variables.scss
@@ -6,8 +6,14 @@ $green-light-gradient: #2ecc708c;
 $blue-dark-gradient: #40199cea;
 $blue-light-gradient: #34d2dd8c;
 
-$orange-dark-gradient: rgb(248, 149, 0);
-$orange-light-gradient: rgb(255, 213, 24);
+$orange-dark-theme: rgb(248, 149, 0);
+$orange-light-theme: rgb(255, 213, 24);
+
+$green-dark-theme: #249b56;
+$green-light-theme: #2ecc70;
+
+$blue-dark-theme: #40199c;
+$blue-light-theme: #34d2dd;
 
 $section-background-color: rgba(231, 231, 231, 0.3);
 $black: #777;
