--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ body {
   background-image: url("../../../images/nat-5.jpg");
 }
 
-.tourCardFront__header--natour {
+.tourCardFront__header--forest {
   background-color: green;
   background-image: url("../../../images/nat-6.jpg");
 }
@@ -414,10 +414,38 @@ body {
   background-image: url("../../../images/nat-7.jpg");
 }
 
-.tourCardFront__header__title {
+.tourCardFront__title {
+  position: absolute;
+  top: 9rem;
+  right: 1rem;
+  width: 70%;
+  text-align: right;
   font-weight: 300;
   font-size: 1.8rem;
   text-transform: uppercase;
+  color: white;
+}
+
+.tourCardFront__titleSpanWrapper {
+  padding: 0.5rem;
+  line-height: 2.5rem;
+  -webkit-box-decoration-break: clone;
+          box-decoration-break: clone;
+}
+
+.tourCardFront__titleSpanWrapper--summer {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#ffd518), to(#f89500));
+  background-image: linear-gradient(to right bottom, #ffd518, #f89500);
+}
+
+.tourCardFront__titleSpanWrapper--sea {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#34d2dd), to(#40199c));
+  background-image: linear-gradient(to right bottom, #34d2dd, #40199c);
+}
+
+.tourCardFront__titleSpanWrapper--forest {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#2ecc70), to(#249b56));
+  background-image: linear-gradient(to right bottom, #2ecc70, #249b56);
 }
 
 .tourCardFront__detail {
@@ -437,6 +465,13 @@ body {
 
 .tourCardBack {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .tourCardBack__subtitle {
@@ -459,8 +494,13 @@ body {
 }
 
 .tourCardBack--forest {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#2ecc708c), to(#249b56ea));
-  background-image: linear-gradient(to right bottom, #2ecc708c, #249b56ea);
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#2ecc70), to(#249b56));
+  background-image: linear-gradient(to right bottom, #2ecc70, #249b56);
+}
+
+.tourCardBack--sea {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#34d2dd), to(#40199c));
+  background-image: linear-gradient(to right bottom, #34d2dd, #40199c);
 }
 
 .flipCard {
