feat: button was added in back tourCard side

--- a/css/commons/abstracts/_variables.scss
+++ b/css/commons/abstracts/_variables.scss
@@ -10,7 +10,7 @@ $orange-dark-theme: rgb(248, 149, 0);
 $orange-light-theme: rgb(255, 213, 24);
 
 $green-dark-theme: #249b56;
-$green-light-theme: #2ecc70;
+$green-light-theme: #95cc2e;
 
 $blue-dark-theme: #40199c;
 $blue-light-theme: #34d2dd;
