--- a/css/commons/abstracts/_mixins.scss
+++ b/css/commons/abstracts/_mixins.scss
@@ -1,19 +1,35 @@
 @mixin getTheme($theme) {
-    @if $theme == 'natour' {
-        @include natourTheme();
-    } @else if $theme == 'sea' {
-        @include seaTheme();
-    }
+  @if $theme == "natour" {
+    @include natourTheme();
+  } @else if $theme == "sea" {
+    @include seaTheme();
+  }
+}
+
+@mixin getBackground($color-light-theme, $color-dark-theme) {
+  background-image: linear-gradient(
+    to right bottom,
+    $color-light-theme,
+    $color-dark-theme
+  );
 }
 
 @mixin natourTheme {
-    background: linear-gradient(to right, $green-light-gradient, $green-dark-gradient);
-    -webkit-background-clip: text;
-    color: transparent;
+  background: linear-gradient(
+    to right,
+    $green-light-gradient,
+    $green-dark-gradient
+  );
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 @mixin seaTheme {
-    background: linear-gradient(to right, $blue-light-gradient, $blue-dark-gradient);
-    -webkit-background-clip: text;
-    color: transparent;
+  background: linear-gradient(
+    to right,
+    $blue-light-gradient,
+    $blue-dark-gradient
+  );
+  -webkit-background-clip: text;
+  color: transparent;
 }
