--- a/css/commons/components/_button.scss
+++ b/css/commons/components/_button.scss
@@ -1,55 +1,54 @@
 .btn {
-    width: 15rem;
-    margin: 0 auto;
+  margin: 0 auto;
+  padding: 1.2rem 2.5rem;
+  border-radius: 2rem;
+  border: none;
+  cursor: pointer;
+  a {
+    color: $black;
+    font-size: 0.95rem;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  &:hover {
+    transform: translateY(-0.25rem);
+    box-shadow: 0 0.625rem 1.25rem rgba($color: black, $alpha: 0.2);
+    &::after {
+      transform: scaleX(1.3) scaleY(1.5);
+      opacity: 0;
+    }
+  }
+  &:active {
+    transform: translateY(-0.05rem);
+    box-shadow: 0 0.3125rem 0.625rem rgba($color: black, $alpha: 0.2);
+  }
+  &::after {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    box-sizing: border-box;
     padding: 1.2rem;
     border-radius: 2rem;
-    border: none;
-    cursor: pointer;
-    a {
-        color: $black;
-        font-size: .95rem;
-        text-transform: uppercase;
-        text-decoration: none;
-    }
-    &:hover {
-        transform: translateY(-0.25rem);
-        box-shadow: 0 0.625rem 1.25rem rgba($color: black, $alpha: .2);
-        &::after {
-            transform: scaleX(1.3) scaleY(1.5);
-            opacity: 0;
-        }
-    }
-    &:active {
-        transform: translateY(-0.05rem);
-        box-shadow: 0 0.3125rem 0.625rem rgba($color: black, $alpha: .2);
-    }
-    &::after {
-        content: "";
-        display: inline-block;
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        box-sizing: border-box;
-        padding: 1.2rem;
-        border-radius: 2rem;
-        z-index: -1;
-        transition: all .3s;
-    }
+    z-index: -1;
+    transition: all 0.3s;
+  }
 
-    &--white {
-        color: $black;
-        background-color: white;
-        &::after {
-            background-color: white;
-        }
+  &--white {
+    color: $black;
+    background-color: white;
+    &::after {
+      background-color: white;
     }
-    
-    &--animated {
-        position: relative;
-        animation-name: headerButton;
-        animation-duration: 1.5s;
-        animation-timing-function: ease-out;
-    }
+  }
+
+  &--animated {
+    position: relative;
+    animation-name: headerButton;
+    animation-duration: 1.5s;
+    animation-timing-function: ease-out;
+  }
 }
