--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,10 @@ body {
   margin-bottom: 1rem;
 }
 
+.u-height-tour-card {
+  height: 33.2rem;
+}
+
 .btn {
   margin: 0 auto;
   padding: 1.2rem 2.5rem;
@@ -182,12 +186,27 @@ body {
 }
 
 .btn--white {
-  color: #777;
   background-color: white;
+}
+
+.btn--white a {
+  color: #777;
 }
 
 .btn--white::after {
   background-color: white;
+}
+
+.btn--green {
+  background-color: #2ecc71;
+}
+
+.btn--green a {
+  color: white;
+}
+
+.btn--green::after {
+  background-color: #2ecc71;
 }
 
 .btn--animated {
@@ -657,5 +676,9 @@ body {
 .toursSection__title {
   text-align: center;
   margin-bottom: 5rem;
+}
+
+.toursSection__bottom {
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
