feat: story and shadow done

--- a/css/commons/base/_utilities.scss
+++ b/css/commons/base/_utilities.scss
@@ -5,3 +5,7 @@
 .u-height-tour-card {
   height: 33.2rem;
 }
+
+.u-filter-drop-shadow {
+  filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.2));
+}
