--- a/css/commons/components/_titleContent.scss
+++ b/css/commons/components/_titleContent.scss
@@ -1,4 +1,7 @@
 .titleContent {
-    text-transform: uppercase;
-    font-size: 1rem;
+  text-transform: uppercase;
+  font-size: 1rem;
+  &--white {
+    color: white;
+  }
 }
